--- a/behavior/src/main/res/values/strings.xml
+++ b/behavior/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="bind">Connect</string>
     <string name="ttc_wallet">TTC Connect</string>
     <string name="loading">Loading…</string>
+    <string name="get_ttc_after_bind">Receive %d TTC after binding</string>
 </resources>
