--- a/behavior/src/main/res/values-zh-rCN/strings.xml
+++ b/behavior/src/main/res/values-zh-rCN/strings.xml
@@ -4,4 +4,6 @@
     <string name="ttc_wallet">TTC Connect</string>
     <string name="loading">加载中…</string>
     <string name="get_ttc_after_bind">绑定后领取%dTTC</string>
+    <string name="please_upgrade_ttc_connect">请升级TTC Connect到最新版本</string>
+    <string name="please_install_ttc_connect">请安装TTC Connect</string>
 </resources>
