--- a/behavior/src/main/res/values-zh-rCN/strings.xml
+++ b/behavior/src/main/res/values-zh-rCN/strings.xml
@@ -6,4 +6,6 @@
     <string name="get_ttc_after_bind">绑定后领取%dTTC</string>
     <string name="please_upgrade_ttc_connect">请升级TTC Connect到最新版本</string>
     <string name="please_install_ttc_connect">请安装TTC Connect</string>
+    <string name="integrate_acn_sdk_too_low">%s集成的ACN SDK版本过低</string>
+    <string name="error_userid_is_empty">用户未登录</string>
 </resources>
