--- a/behavior/src/main/res/values-ko-rKR/strings.xml
+++ b/behavior/src/main/res/values-ko-rKR/strings.xml
@@ -6,6 +6,6 @@
     <string name="get_ttc_after_bind">바인딩 후 %d TTC 수신</string>
     <string name="please_upgrade_ttc_connect">TTC Connect를 최신 버전으로 업그레이드하십시오.</string>
     <string name="please_install_ttc_connect">TTC Connect를 설치하십시오.</string>
-    <string name="integrate_acn_sdk_too_low">tata에 통합 된 ACN SDK가 너무 낮습니다.</string>
+    <string name="integrate_acn_sdk_too_low">%s 에 통합 된 ACN SDK가 너무 낮습니다.</string>
     <string name="error_userid_is_empty">로그인하지 않은 사용자</string>
 </resources>
