--- a/pay/src/main/res/values-ko-rKR/strings.xml
+++ b/pay/src/main/res/values-ko-rKR/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="loading">로드 중…</string>
+    <string name="pls_update_acorn_box">Acorn Box을 업그레이드하십시오</string>
+    <string name="pls_install_ttc_connect">TTC Connect을 설치하십시오</string>
+    <string name="pls_update_ttc_connect">TTC Connect을 업그레이드하십시오</string>
 </resources>
