--- a/pay/src/main/res/values/strings.xml
+++ b/pay/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="loading">Loading…</string>
+    <string name="pls_update_acorn_box">Please update Acorn Box</string>
+    <string name="pls_install_ttc_connect">Please install TTC Connect</string>
+    <string name="pls_update_ttc_connect">Please update TTC Connect</string>
 </resources>
